--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
-  awards: Most Dedicated Student per Optional Activities Completed
-  summary: Spent 6 dedicated months working 12 hour days to build out multiple real world apps and websites.
+- degrees: Full Stack Webdeveloper Nanodegree
+  unit: Udacity
+  years: June, 2014 &mdash; January, 2015
+  awardss: Most Dedicated Student per Optional Activities Completed
+  summarys: Spent 6 dedicated months working 12 hour days to build out multiple real world apps and websites.
